# anki-tools

./: CONTRIBUTING.md  README.md  anki-tools.cabal  default.nix  shell.nix
.github/workflows/: haskell.yml
src/Anki/: Card.hs  Collection.hs  Common.hs  Deck.hs  Misc.hs  Model.hs  Note.hs  Tools.hs  Types.hs  UserProfile.hs
test/: Main.hs  MainTest.hs
