name:                anki-tools
version:             0.1.0.0
synopsis:            Tools for interacting with Anki database
-- description:
license:             BSD3
license-file:        LICENSE
author:              Al Zohali
maintainer:          zohl@fmap.me
-- copyright:
category:            Database
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/zohl/anki-tools.git

flag dev
  description:        Turn on development settings.
  manual:             True
  default:            False

library
  exposed-modules:
    Anki.Tools
    Anki.Collection
    Anki.Common
    Anki.Model
    Anki.Deck
    Anki.Note
    Anki.Card
    Anki.Misc
    Anki.UserProfile

  build-depends: base >=4.8 && < 5.0
               , aeson
               , bytestring
               , data-default
               , directory
               , exceptions
               , filepath
               , mtl
               , scientific
               , sqlite-simple
               , time
               , text
               , unordered-containers

  hs-source-dirs:      src
  default-language:    Haskell2010

  if flag(dev)
    ghc-options:      -Wall -Werror
  else
    ghc-options:      -Wall -Werror -O2

test-suite test
  type: exitcode-stdio-1.0
  main-is: test.hs
  other-modules:
      MainTest
  hs-source-dirs:
      test
  build-depends:
      base >=4.8 && <5
    , anki-tools
    , data-default
    , hspec
    , tasty
    , tasty-discover
    , tasty-hspec
  default-language: Haskell2010

  if flag(dev)
    ghc-options:      -Wall -Werror
  else
    ghc-options:      -Wall -Werror -O2
